# wavesentinel-wids

./: .gitignore  ATTACK_STIMULATION_DEAUTH.md  DEVELOPMENT.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  wids_gui.py  wids_sniffer.py
.github/workflows/: ci.yml
config/: thresholds.json
data/: activity_logs.json  alerts.csv  devices.json  known_devices.csv  status.json  traffic_logs.csv
src/: __init__.py  attack_detector.py  device_scanner.py  logger.py  packet_capture.py
web/: app.py
web/static/: style.css
web/templates/: dashboard.html
