[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavesentinel-wids"
version = "0.1.0"
description = "WaveSentinel: Real-Time 802.11 Wireless Intrusion Detection Dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
    { name = "0xG10D" },
]
keywords = [
    "802.11",
    "flask",
    "network-security",
    "scapy",
    "wavesentinel",
    "wids",
    "wireless-security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "Flask>=3.0,<4.0",
    "scapy>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0,<25.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
wavesentinel = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
